crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-dataset-multi_column_megascience_vector_search_sql_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
[
  {
    "id": 1277,
    "_score": "0.53"
  },
  {
    "id": 948,
    "_score": "0.52"
  },
  {
    "id": 191,
    "_score": "0.52"
  },
  {
    "id": 41,
    "_score": "0.50"
  }
]
