crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-dataset-multi_column_megascience_vector_search_sql_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(score, 3) as score  FROM vector_search(qs, 'second', answer) order by score desc, id desc LIMIT 4;"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                  |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id DESC NULLS FIRST, fetch=4                                  |
|               |   Projection: vector_search(qs, Utf8("second"), answer).id, trunc(vector_search(qs, Utf8("second"), answer).score, Int64(3)) AS score |
|               |     TableScan: vector_search(qs, Utf8("second"), answer) projection=[id, score]                                                       |
| physical_plan | SortPreservingMergeExec: [score@1 DESC, id@0 DESC], fetch=4                                                                           |
|               |   SortExec: TopK(fetch=4), expr=[score@1 DESC, id@0 DESC], preserve_partitioning=[true]                                               |
|               |     ProjectionExec: expr=[CAST(key@0 AS Int64) as id, trunc(1 - distance@1, 3) as score]                                              |
|               |       CooperativeExec                                                                                                                 |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                          |
|               |           BytesProcessedExec                                                                                                          |
|               |             CooperativeExec                                                                                                           |
|               |               S3VectorsQueryExec (spice-ci-tests-s3-vectors/duckdb-dataset-multi-column-8): limit=100                                 |
|               |                                                                                                                                       |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------+
